[gd_scene load_steps=4 format=3 uid="uid://cera3jgem28wk"]

[ext_resource type="Script" path="res://Scenes/Interfaces/progress_control.gd" id="1_7ydq1"]
[ext_resource type="PackedScene" uid="uid://r1erbh5spxqf" path="res://Scenes/BaseInterfaces/Input/custom_input.tscn" id="1_x112r"]
[ext_resource type="PackedScene" uid="uid://qx6yj04f3171" path="res://Scenes/StaticDisplays/progress_bar.tscn" id="2_4vred"]

[node name="ProgressControl" type="Control"]
layout_mode = 3
anchor_right = 0.347222
anchor_bottom = 0.308642
script = ExtResource("1_7ydq1")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.59, 0, 0.6, 1)
metadata/_edit_use_anchors_ = true

[node name="ProgressBar" parent="." instance=ExtResource("2_4vred")]
layout_mode = 1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.950001
anchor_bottom = 0.4

[node name="CustomInput" parent="." instance=ExtResource("1_x112r")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2625
anchor_top = 0.585
anchor_right = 0.5375
anchor_bottom = 0.855
offset_right = -1.52588e-05
offset_bottom = 0.0
text = "1"
metadata/_edit_use_anchors_ = true

[node name="Use" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.565
anchor_top = 0.54
anchor_right = 0.7425
anchor_bottom = 0.695
text = "Use"
metadata/_edit_use_anchors_ = true

[node name="Refund" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.565
anchor_top = 0.725
anchor_right = 0.7425
anchor_bottom = 0.88
text = "Refund"
metadata/_edit_use_anchors_ = true

[node name="Set" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.78
anchor_top = 0.575
anchor_right = 0.957501
anchor_bottom = 0.86
text = "Set"
metadata/_edit_use_anchors_ = true

[node name="ProgressNumber" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.04
anchor_top = 0.59
anchor_right = 0.24
anchor_bottom = 0.87
text = "Unused"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Use" to="." method="button_use"]
[connection signal="pressed" from="Refund" to="." method="button_refund"]
[connection signal="pressed" from="Set" to="." method="button_set"]
